Don't display)hidden the inactive beads when wrongly selected. Instead, render them invisible. This is to avoid slight offsets.

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -125,6 +125,10 @@ body {
   visibility: hidden;
 }
 
+.hidden {
+  visibility: hidden;
+}
+
 .levelBoard-score {
   font-family: "Noto Color Emoji", sans-serif;
 }
